Create dynamic shades and base navbar

--- a/src/app/ui/layout/components/navbar/navbar.component.html
+++ b/src/app/ui/layout/components/navbar/navbar.component.html
@@ -1,1 +1,8 @@
-<p>navbar works!</p>
+<div class="nav">
+  <a routerLink="/">
+    <h1>Where in the world?</h1>
+  </a>
+  <label>
+    <span>Dark mode</span>
+  </label>
+</div>
