Add headings styles and fix general things

--- a/src/app/ui/layout/components/navbar/navbar.component.html
+++ b/src/app/ui/layout/components/navbar/navbar.component.html
@@ -3,6 +3,8 @@
     <h1>Where in the world?</h1>
   </a>
   <label>
+    <span></span>
     <span>Dark mode</span>
+    <i class="icon ion-md-heart"></i>
   </label>
 </div>
