--- a/src/app/ui/layout/components/navbar/navbar.component.scss
+++ b/src/app/ui/layout/components/navbar/navbar.component.scss
@@ -4,4 +4,11 @@
   justify-content: space-between;
   background-color: var(--element);
   box-shadow: var(--shadow-sm);
+  padding: 2rem 1.5rem;
+}
+
+.nav {
+  * {
+    margin: 0;
+  }
 }
