Add material design icons

--- a/src/app/ui/layout/components/navbar/navbar.component.html
+++ b/src/app/ui/layout/components/navbar/navbar.component.html
@@ -2,9 +2,11 @@
   <a routerLink="/">
     <h1>Where in the world?</h1>
   </a>
-  <label>
-    <span></span>
-    <span>Dark mode</span>
-    <i class="icon ion-md-heart"></i>
+  <label class="theme-toggler">
+    <span class="material-icons pr-2">
+      brightness_2
+    </span>
+    <input type="checkbox" />
+    <span>Dark Mode</span>
   </label>
 </div>
