--- a/src/app/ui/layout/components/navbar/navbar.component.scss
+++ b/src/app/ui/layout/components/navbar/navbar.component.scss
@@ -1,4 +1,5 @@
 .nav {
+  height: 70px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -10,5 +11,23 @@
 .nav {
   * {
     margin: 0;
+  }
+}
+
+.theme-toggler {
+  font-weight: 600;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  border: solid 1px transparent;
+  border-radius: 4px;
+  padding: 0.5rem;
+
+  &:hover {
+    background-color: var(--active);
+  }
+
+  input {
+    display: none;
   }
 }
