--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,9 @@
 |-- [2] site            
 |   |-- [2.1] base styles
 |   |-- [2.2] themes
-
+|
+|-- [3] components
+|   |-- [3.1] icons
 */
 
 /* ---------------------
@@ -39,11 +41,13 @@ $themes: (
     "text": #111517,
     "background": #fafafa,
     "element": #fff,
+    "active": #e9e9e9,
   ),
   dark: (
     "text": #fff,
     "background": #202c37,
     "element": #2b3945,
+    "active": #202c37,
   ),
 );
 
@@ -179,4 +183,26 @@ a {
 }
 a:hover {
   color: #3974b8;
+}
+
+/* ---------------------
+[3] components
+----------------------*/
+
+/*  [3.1] icons  */
+.icon-wrapper {
+  display: inline-block;
+
+  svg {
+    width: 1.6rem;
+    height: 1.6rem;
+    fill: var(--text);
+  }
+}
+
+.icon-wrapper.icon-wrapper-lg {
+  svg {
+    width: 2.4rem;
+    height: 2.4rem;
+  }
 }
