Implement countries cards layout

--- a/src/app/pages/features/countries/pages/countries/countries.page.html
+++ b/src/app/pages/features/countries/pages/countries/countries.page.html
@@ -1,1 +1,6 @@
-<p>countries works!</p>
+<div class="cards-wrapper" *ngIf="countries?.length > 0">
+  <app-country-card
+    *ngFor="let country of countries"
+    [country]="country"
+  ></app-country-card>
+</div>
