--- a/src/styles.scss
+++ b/src/styles.scss
@@ -185,6 +185,16 @@ a:hover {
   color: #3974b8;
 }
 
+.font-weight-300 {
+  font-weight: 300;
+}
+.font-weight-600 {
+  font-weight: 600;
+}
+.font-weight-800 {
+  font-weight: 800;
+}
+
 /* ---------------------
 [3] components
 ----------------------*/
