--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,13 +25,13 @@
 
 /*  [1] variables */
 $shades-light: (
-  shadow-sm: 0 0 10px 0 rgba(133, 133, 133, 0.4),
+  shadow-sm: 0 0 10px -3px rgba(133, 133, 133, 0.4),
   shadow-md: 0 0 20px 0 rgba(133, 133, 133, 0.4),
   shadow-lg: 0 0 30px 0 rgba(133, 133, 133, 0.4),
 );
 
 $shades-dark: (
-  shadow-sm: 0 0 10px 0 rgba(0, 0, 0, 0.17),
+  shadow-sm: 0 0 10px -3px rgba(0, 0, 0, 0.17),
   shadow-md: 0 0 20px 0 rgba(0, 0, 0, 0.17),
   shadow-lg: 0 0 30px 0 rgba(0, 0, 0, 0.17),
 );
