--- a/src/app/pages/features/countries/pages/countries/countries.page.scss
+++ b/src/app/pages/features/countries/pages/countries/countries.page.scss
@@ -1,13 +1,34 @@
 .countries-toolbar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  display: grid;
+  gap: 4.5rem;
   margin: 3rem 0 0.5rem;
+
+  .select-box {
+    width: 50%;
+  }
+
+  @media screen and (min-width: 992px) {
+    & {
+      grid-template-columns: 48rem 23rem;
+      justify-content: space-between;
+
+      .select-box {
+        width: 100%;
+      }
+    }
+  }
 }
 
 .countries-wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(29rem, 1fr));
+  grid-template-columns: 1fr;
   justify-items: center;
   gap: 3rem;
+
+  @media screen and (min-width: 768px) {
+    & {
+      grid-template-columns: repeat(auto-fit, 29rem);
+      justify-content: space-between;
+    }
+  }
 }
