--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@
 |   |-- [2.2] themes
 |
 |-- [3] components
-|   |-- [3.1] icons
+|   |-- [3.1] buttons
 */
 
 /* ---------------------
@@ -25,7 +25,7 @@
 
 /*  [1] variables */
 $shades-light: (
-  shadow-sm: 0 0 10px -3px rgba(133, 133, 133, 0.4),
+  shadow-sm: 0 0 7px -3px rgba(133, 133, 133, 1),
   shadow-md: 0 0 20px 0 rgba(133, 133, 133, 0.4),
   shadow-lg: 0 0 30px 0 rgba(133, 133, 133, 0.4),
 );
@@ -199,20 +199,21 @@ a:hover {
 [3] components
 ----------------------*/
 
-/*  [3.1] icons  */
-.icon-wrapper {
-  display: inline-block;
+/*  [3.1] buttons  */
+.btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--element);
+  color: var(--text) !important;
+  box-shadow: var(--shadow-sm);
+  border: solid 1px transparent;
+  border-radius: 4px;
+  font-size: 1.4rem;
+  text-decoration: none !important;
+  transition: all 300ms ease;
 
-  svg {
-    width: 1.6rem;
-    height: 1.6rem;
-    fill: var(--text);
-  }
-}
-
-.icon-wrapper.icon-wrapper-lg {
-  svg {
-    width: 2.4rem;
-    height: 2.4rem;
+  &:hover {
+    box-shadow: var(--shadow-md);
   }
 }
