--- a/src/app/pages/features/countries/pages/countries/countries.page.html
+++ b/src/app/pages/features/countries/pages/countries/countries.page.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container">
   <div class="countries-toolbar">
     <div class="filter-box">
       <app-text-box
