--- a/src/app/pages/features/countries/pages/country/country.page.html
+++ b/src/app/pages/features/countries/pages/country/country.page.html
@@ -1,1 +1,3 @@
-<app-country-info></app-country-info>
+<div class="container country-info-container">
+  <app-country-info></app-country-info>
+</div>
