--- a/src/app/ui/layout/components/navbar/navbar.component.scss
+++ b/src/app/ui/layout/components/navbar/navbar.component.scss
@@ -6,6 +6,13 @@
   background-color: var(--element);
   box-shadow: var(--shadow-sm);
   padding: 2rem 1.5rem;
+
+  @media screen and (min-width: 1200px) {
+    & {
+      padding-left: 3.5rem;
+      padding-right: 3.5rem;
+    }
+  }
 }
 
 .nav {
