--- a/src/app/ui/text-box/components/text-box/text-box.component.scss
+++ b/src/app/ui/text-box/components/text-box/text-box.component.scss
@@ -7,7 +7,7 @@
   position: relative;
   display: inline-block;
   background-color: var(--element);
-  color: var(--text);
+  color: var(--filter-text);
   font-size: 1.2rem;
   font-weight: 600;
   box-shadow: var(--shadow-sm);
@@ -24,6 +24,7 @@
   }
 
   input {
+    width: 100%;
     height: 100%;
     outline: none;
     background: inherit;
@@ -33,10 +34,10 @@
     color: inherit;
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
-    margin: 0 2rem 0 1.5rem;
+    padding: 0 2rem 0 1.5rem;
 
     &::placeholder {
-      color: var(--text);
+      color: var(--filter-text);
     }
   }
 }
