--- a/src/app/pages/features/countries/components/country-card/country-card.component.html
+++ b/src/app/pages/features/countries/components/country-card/country-card.component.html
@@ -1,4 +1,4 @@
-<a routerLink="" class="card mt-5">
+<a [routerLink]="[country.alpha2Code]" class="card mt-5">
   <div
     class="card-header"
     [style.backgroundImage]="'url(' + country.flag + ')'"
