--- a/src/app/pages/features/countries/pages/countries/countries.page.scss
+++ b/src/app/pages/features/countries/pages/countries/countries.page.scss
@@ -32,3 +32,14 @@
     }
   }
 }
+
+.not-found-wrapper {
+  max-width: 50rem;
+  text-align: center;
+  margin: 8rem auto 3rem;
+
+  .not-found-image {
+    width: 100%;
+    object-fit: cover;
+  }
+}
