--- a/src/app/pages/features/countries/pages/countries/countries.page.html
+++ b/src/app/pages/features/countries/pages/countries/countries.page.html
@@ -16,6 +16,10 @@
     </div>
   </div>
 
+  <div *ngIf="isLoading" class="loader-wrapper">
+    <app-loading-spinner></app-loading-spinner>
+  </div>
+
   <ng-container
     *ngIf="(countries | countriesFilterByName: filter) as countriesResult"
   >
