--- a/src/app/ui/layout/components/footer/footer.component.html
+++ b/src/app/ui/layout/components/footer/footer.component.html
@@ -1,1 +1,22 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="container">
+    <div class="d-flex align-items-center justify-content-center">
+      <span>
+        Challenge by
+        <a
+          href="https://www.frontendmentor.io?ref=challenge"
+          rel="noreferrer"
+          target="_blank"
+        >
+          Frontend Mentor</a
+        >. Coded by<a
+          href="https://github.com/juanmesa2097"
+          rel="noreferrer"
+          target="_blank"
+        >
+          juanmesa2097</a
+        >.
+      </span>
+    </div>
+  </div>
+</footer>
