--- a/src/app/pages/features/countries/pages/countries/countries.page.scss
+++ b/src/app/pages/features/countries/pages/countries/countries.page.scss
@@ -1,7 +1,7 @@
 .countries-toolbar {
   display: grid;
   gap: 4.5rem;
-  margin: 3rem 0 0.5rem;
+  margin: 4rem 0 1rem;
 
   .select-box {
     width: 50%;
@@ -31,7 +31,7 @@
 
   @media screen and (min-width: 768px) {
     & {
-      grid-template-columns: repeat(auto-fit, 29rem);
+      grid-template-columns: repeat(auto-fill, 29rem);
       justify-content: space-between;
     }
   }
