--- a/src/app/pages/features/countries/pages/country/country.page.html
+++ b/src/app/pages/features/countries/pages/country/country.page.html
@@ -1,3 +1,3 @@
-<div class="container country-info-container">
+<div class="country-info-container">
   <app-country-info *ngIf="country" [country]="country"></app-country-info>
 </div>
