--- a/src/app/ui/layout/components/navbar/navbar.component.scss
+++ b/src/app/ui/layout/components/navbar/navbar.component.scss
@@ -6,11 +6,20 @@
   background-color: var(--element);
   box-shadow: var(--shadow-sm);
   padding: 2rem 1.5rem;
+  font-size: 1.2rem;
 
+  h1 {
+    font-size: 1.6rem;
+  }
   @media screen and (min-width: 1200px) {
     & {
       padding-left: 3.5rem;
       padding-right: 3.5rem;
+      font-size: 1.4rem;
+    }
+
+    h1 {
+      font-size: 2.5rem;
     }
   }
 }
